--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="row">
 
         <div class="col-md-4" data-aos="zoom-in">
-          <img src="/passportPicture.jpg" alt="passportPicture" class="card-img img-fluid">
+          <img src="/images/passportPicture.jpg" alt="passportPicture" class="card-img img-fluid">
         </div>
 
 
@@ -204,7 +204,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/card-2.jpg" class="card-img-top" alt="...">
+            <img src="/images/card-2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -214,7 +214,7 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-3">
-            <img src="/card-1.jpg" class="card-img-top" alt="...">
+            <img src="/images/card-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -225,7 +225,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="card mb-3">
-              <img src="/card-2.jpg" class="card-img-top" alt="...">
+              <img src="/images/card-2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -235,7 +235,7 @@
           </div>
           <div class="col-md-6">
             <div class="card mb-3">
-              <img src="/card-1.jpg" class="card-img-top" alt="...">
+              <img src="/images/card-1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
